Implemented password recovery feature.
