# src/auth/auth.routes.ts
@@ -1,8 +1,10 @@
 import express from "express";
 
 import {
+  forgotPassword,
   login,
   refreshToken,
+  resetPassword,
   revokeRefreshTokens,
   signup,
 } from "./auth.controllers";
@@ -12,6 +14,8 @@ const authRouter = express.Router();
 
 authRouter.post("/login", login);
 authRouter.post("/signup", signup);
+authRouter.post("/forgot_password", forgotPassword);
+authRouter.post("/reset_password/:resetPasswordToken", resetPassword);
 authRouter.post("/refresh_token", refreshToken);
 authRouter.post(
   "/revoke_refresh_tokens",
